# tracker-synth

./: Cargo.toml  Dioxus.toml  justfile
.cargo/: config.toml
assets/: main.css
src/: less_then.rs  main.rs  tracks.rs
src/synth/: mod.rs
